# skunkswork

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LESSONS.md  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  ontology.yaml  package-lock.json  package.json  policies.yaml  pyproject.toml  requirements.txt  state_schema.json
.github/workflows/: ci.yml  security.yml
agents/: __init__.py  base.py  orchestrator.md  orchestrator.py
agents/discovery/: __init__.py  access_gatekeeper.py  link_crawler.py  page_classifier.py  site_mapper.py
agents/enrichment/: __init__.py  contact_finder.py  firmographic.py  tech_stack.py
agents/export/: __init__.py  export_activation.py
agents/extraction/: __init__.py  api_client.py  event_extractor.py  event_participant_extractor.py  html_parser.py  pdf_parser.py
agents/intelligence/: __init__.py  competitor_signal_miner.py  relationship_graph_builder.py
agents/monitoring/: __init__.py  source_monitor.py
alembic/: env.py
config/: agents.yaml  associations.yaml
contracts/: README.md  __init__.py  validator.py
db/: __init__.py  connection.py  migrate.py  models.py  repository.py
docs/: HANDOFF.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_TASKS.md  RUNBOOK.md  STATE_MACHINE_FLOW.md  WORK_BREAKDOWN_STRUCTURE.md
hooks/: on_error.py  post_agent.py  pre_agent.py
middleware/: __init__.py  policy.py  secrets.py
models/: __init__.py  ontology.py
scripts/: abm_battlecards.py  abm_campaign_playbooks.py  abm_executive_briefing.py  abm_icp_scoring.py  abm_market_intelligence.py  abm_shared.py  abm_target_lists.py  amt_scraper.py  build_agma_jsonl.py  build_dashboard.py  enrich_batch.py  enrich_contacts_crawl.py  enrich_dns_deep.py  enrich_email_patterns.py  enrich_google_maps.py  enrich_job_intelligence.py  enrich_nema_sample.py  enrich_sec_edgar.py  enrich_website_deep.py  export_excel.py  export_intelligence.py  export_segments.py  extract_afs.py  extract_agma_supplemental.py  extract_all.py  extract_nadca.py  extract_nam_cma.py  generate_all_deliverables.py  generate_exec_summary.py  healthcheck.py  import_xlsx_seed.py  init_db.py  merge_and_export.py  merge_pma_batch.py  pma_mcp_driver.py  pma_scraper.html  quality_pipeline.py  scrape_pma_batch.py  scrape_pma_httpx.py  scrape_pma_mcp.py  (+2 more)
skills/: __init__.py
state/: __init__.py  machine.py
tests/: __init__.py  conftest.py  test_agent_spawner.py  test_anti_bot.py  test_api_client_agent.py  test_base_agent.py  test_checkpoint_safety.py  test_competitor_signal_miner.py  test_contracts.py  test_db_integration.py  test_db_models.py  test_db_repository.py  test_dead_letter_queue.py  test_discovery_access_gatekeeper.py  test_discovery_link_crawler.py  test_discovery_page_classifier.py  test_discovery_site_mapper.py  test_enrichment_contact_finder.py  test_enrichment_firmographic.py  test_enrichment_tech_stack.py  test_event_extractor.py  test_event_participant_extractor.py  test_export_activation.py  test_html_parser_agent.py  test_http_client_retry.py  test_load.py  test_memory_profiling.py  test_middleware_policy.py  test_orchestrator_hardening.py  test_pdf_parser_agent.py  test_pipeline_integration.py  test_relationship_graph_builder.py  test_secrets.py  test_source_monitor.py  test_state_machine.py  test_structured_logger.py  test_validation_crossref.py  test_validation_dedupe.py  test_validation_entity_resolver.py  test_validation_scorer.py
(+72 files in other folders)
