[project]
name = "nam-intelligence-pipeline"
version = "0.1.0"
description = "Multi-agent data pipeline for manufacturing company intelligence"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable name
    "UP007",  # Optional[X] vs X | None — keep existing style
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
